Java and spring upgrade